# price-parser

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml
evaluation/: dataset_eval.json  evaluate_currency_extraction.py
price_parser/: __init__.py  _currencies.py  parser.py
tests/: test_languages.py  test_natural_language_numbers.py  test_price_parsing.py
